2005-10-06  Vincent Noel  <vnoel@cox.net>

	* log_repaint.c (logview_draw_log_lines): Plug a huge memory leak
	(utf8 strings not freed after insertion in a GtkTreeStore).
	(logview_draw_log_lines): Plug a leak. Valgrind is da bomb.

	* logrtns.c (OpenLogFile): Plug leaks.
	(ReadLogStats): Plug a leak by using
	gnome_vfs_file_info_unref. Totally not obvious...
	(WasModified): Removed.
	(GetDate): make static.

2005-10-06  Vincent Noel  <vnoel@cox.net>

	* log_repaint.c (logview_draw_log_lines): Correctly scroll to the
	end of the log when new lines are added.

2005-10-06  Vincent Noel  <vnoel@cox.net>

	* logview.c (logview_create_monitor_widget, monitor_stop): Some leftover cruft.
	* monitor.c (monitor_callback): Make it static.

2005-10-06  Vincent Noel  <vnoel@cox.net>

	* monitor.c (mon_update_display): Remove.
	(monitor_callback): Only repaint the window if the updated log is
	currently displayed.

2005-10-06  Vincent Noel  <vnoel@cox.net>

	* logview.h: 
	* logview.c (CreateMainWin): Remove the monitor widget. This feels
	so good.

	* monitor.c (mon_format_line): Remove
	* monitor.c (mon_check_log) : remove.

	* log_repaint.c (logview_draw_log_lines): When monitoring, just
	append the new lines to the end of the displayed log and scroll
	down there.

	* monitor.c (mon_update_display): Remove a whole bunch of stuff
	for using the monitor widget.
	* log_repaint.c (log_repaint): Remove reference to monitor widget.

	* logview.h: 
	* monitor.c (monitor_stop, monitor_callback, monitor_start): 
	Use gnome_vfs_monitor to monitor file instead of polling. 

	* logview.c (CreateMainWin): Use the desktop monospace font by
	default.

	* log_repaint.c (logview_draw_log_lines): Prevent cast
	warning. Part of bug #318095. Patch by Stanislav Brabec.
	* about.c: Fix missing include. Part of bug #318095. Patch
	by Stanislav Brabec.

2006-10-04  Rodrigo Moya <rodrigo@novell.com>

	* logrtns.c (file_exist): added missing argument to g_snprintf.

2005-09-26  noel  <vnoel@cox.net>
