@@ -1,5 +1,9 @@
 2005-10-06  Vincent Noel  <vnoel@cox.net>
 
+	* logview.c: Monitor logs by default.
+
+2005-10-06  Vincent Noel  <vnoel@cox.net>
+
 	* log_repaint.c (logview_draw_log_lines): Plug a huge memory leak
 	(utf8 strings not freed after insertion in a GtkTreeStore).
 	(logview_draw_log_lines): Plug a leak. Valgrind is da bomb.
